cập nhật lại file CurrencyUtils, DateUtils, AlertUtils và FileUtils.